# PythonProjectTemplate

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: _constants.py  _log.py  {{ cookiecutter.project_slug }}.py
