[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
license.text = "Copyright © Matthew Armstrong"
authors = [
  {name = "Matthew Armstrong"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "D",   # pydocstyle
  "N",   # pep8-naming
  "I",   # isort
  "C90", # mccabe complexity
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ANN", # flake8-annotations
]
ignore = ["ANN101", "D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"